Revert "Fix: Prevent overflow of unicode characters in messages obscuring other messages"
This reverts commit d8b8c80dd042bbf83b6fc44e6ec71c421cbadd99.

--- a/assets/SCSS/_messages.scss
+++ b/assets/SCSS/_messages.scss
@@ -3,7 +3,6 @@
 .ntv__chat-message {
 	font-size: $root_font_size;
 	padding: 0.33em 0.9em;
-	overflow: hidden;
 	margin: 0;
 
 	&:hover {
